--- a/html_advanced/24-index.html
+++ b/html_advanced/24-index.html
@@ -17,13 +17,15 @@
                 <a href="/"><span>Techium</span></a>
             </div>
             <nav>
-                <a href="/">Home</a>
-                <a href="#services">Services</a>
-                <a href="#works">Works</a>
-                <a href="#about">About</a>
-                <a href="#latest_news">Latest news</a>
-                <a href="#testimonials">Testimonials</a>
-                <a href="#contact">Contact</a>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#works">Works</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -55,7 +57,14 @@
                     <h3><a href="#">Web Development</a></h3>
                     <h3><a href="#">Social Media</a></h3>
                 </div>
-            </div>
+            </div>                <a href="/">Home</a>
+            <a href="#services">Services</a>
+            <a href="#works">Works</a>
+            <a href="#about">About</a>
+            <a href="#latest_news">Latest news</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
+
         </section>
 
         <!-- Works section -->
@@ -151,15 +160,10 @@
     <!-- Footer -->
     <footer>
         <div>
-            <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-            <a href="https://twitter.com/holbertonschool">Twitter</a>
-            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
-        </div>
-        <div>
             <ul>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
             </ul>
         </div>
     </footer>
