table thead tbody tr td

--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -119,30 +119,26 @@
                     <h2>Table</h2>
                 </header>
                 <table>
-                    <thead>
-                        <tr>
-                            <th>Element</th>
-                            <th>Usage</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Heading</td>
-                            <td>h1-h6</td>
-                            <td>Section titles and subtitles</td>
-                        </tr>
-                        <tr>
-                            <td>Paragraph</td>
-                            <td>p</td>
-                            <td>Main body text</td>
-                        </tr>
-                        <tr>
-                            <td>Quote</td>
-                            <td>q, blockquote</td>
-                            <td>Citations and quotations</td>
-                        </tr>
-                    </tbody>
+                    <tr>
+                        <th>Title</th>
+                        <th>Director</th>
+                        <th>Release Date</th>
+                    </tr>
+                    <tr>
+                        <th>Star Wars: Episode IV - A New Hope</th>
+                        <td>George Lucas</td>
+                        <td>May 25th, 1977</td>
+                    </tr>
+                    <tr>
+                        <th>Star Wars: Episode V - The Empire Strikes Back</th>
+                        <td>Irvin Kershner</td>
+                        <td>May 21st, 1980</td>
+                    </tr>
+                    <tr>
+                        <th>Star Wars: Episode VI - Return of the Jedi</th>
+                        <td>Richard Marquand</td>
+                        <td>May 25th, 1983</td>
+                    </tr>
                 </table>
             </section>
                 
